# rust-auth-service

./: .gitignore  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email_client.rs  error.rs  mod.rs  user.rs
auth-service/src/domain/parse/: email.rs  login_attempt_id.rs  mod.rs  password.rs  two_factor_auth_code.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_factor_auth_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_factor_auth_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_factor_auth_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
