[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
fake = "5.1.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
lazy_static = "1.5.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
fake = "5.1.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
reqwest = { version = "0.13.3", default-features = false, features = ["cookies", "json"] }
